# ipac

./: .gitignore  README.md
.agents/instructions/: principles.instructions.md  skill-reload.instructions.md
.agents/skills/algorithm-selector/: SKILL.md
.agents/skills/algorithm-selector/scripts/: catalog.py  matcher.py
.agents/skills/author-skill/: SKILL.md
.agents/skills/author-skill/references/: platform-detection.md  validation.md
.agents/skills/author-skill/scripts/: sync-spec.ps1  sync-spec.sh  validate-cli.ps1  validate-cli.sh
.agents/skills/code-context-trace/: SKILL.md
.agents/skills/code-context-trace/scripts/: python_tracer.py  rust_tracer.py  trace.py
.agents/skills/code-context-trace/scripts/rust_tracer/: Cargo.toml
.agents/skills/code-context-trace/scripts/rust_tracer/src/: main.rs
.agents/skills/code-craft-principles/: SKILL.md
.agents/skills/data-structure-design/: SKILL.md
.agents/skills/data-structure-design/references/: lineage.md  representation-patterns.md
.agents/skills/design-principles/: SKILL.md
.agents/skills/dialectical-analysis/: SKILL.md
.agents/skills/git-commit/: SKILL.md
.agents/skills/problem-solving/: SKILL.md
.agents/skills/research-craft-principles/: SKILL.md
.agents/skills/search-grounded-response/: SKILL.md
.agents/skills/thinking-principles/: SKILL.md
scripts/: link-ipac.ps1  link-ipac.sh
